--- a/au-tab-panel/src/index.html
+++ b/au-tab-panel/src/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://angular-academy.s3.amazonaws.com/bundles/bundle.20170214122720.min.css" >
 
     <style>
 
